written summary pupil integration

--- a/documentation/written summary/proceedings.tex
+++ b/documentation/written summary/proceedings.tex
@@ -244,7 +244,7 @@ We created a class that stores the client information like ip addresses, ports a
 \begin{verbatim}
 requestSocket = new RequestSocket(
   IPHeader + c.port); 
-requestSocket.SendFrame("SUB_PORT");).
+requestSocket.SendFrame("SUB_PORT");)
 \end{verbatim}
 
 
